# practice-data-analysis

./: .gitignore  README.md  pyproject.toml
decision- forest/: DF.ipynb  GBDT原理.md
house-prices-advanced-regression-techniques/: decision_tree.html  house-prices-prediction-using-tfdf.ipynb  submission_gf.csv  submission_rf.csv
